--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.orangehrm</groupId>
-	<artifactId>OrangeHRM</artifactId>
+	<artifactId>OrangeHRMProject</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<name>OrangeHRM</name>
