--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
-url = https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
-#url = http://localhost/orangehrm/web/index.php/auth/login
+#url = https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
+url = http://localhost/orangehrm/web/index.php/auth/login
 
 username = Admin
 password = admin123
