--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,7 @@
+#This should be true if we wand to run in grid
+seleniumGrid = false
+hubUrl = http://localhost:4444/wd/hub
+
 #url = https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
 url = http://localhost/orangehrm/web/index.php/auth/login
 
