adding code for selenium Grid with docker

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,9 +1,11 @@
 #This should be true if we wand to run in grid
-seleniumGrid = false
+seleniumGrid = true
+seleniumGridDocker = true
 hubUrl = http://localhost:4444/wd/hub
 
-#url = https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
-url = http://localhost/orangehrm/web/index.php/auth/login
+url_base = https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
+url_grid_local = http://localhost/orangehrm/web/index.php/auth/login
+url_grid_docker = http://host.docker.internal/orangehrm/web/index.php/auth/login
 
 username = Admin
 password = admin123
