--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,54 +1,55 @@
-services:
-	chrome:
-		image: selenium/node-chrome:4.38.0
-		shm_size: 2gb
-		deploy:
-			replicas: 1
-		depends_on:
-			- selenium-hub
-		extra_hosts:
-			- "localhost:host-gateway"
-		environment:
-			- SE_EVENT_BUS_HOST=selenium-hub
-			- SE_EVENT_BUS_PUBLISH_PORT=4442
-			- SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-			- SE_NODE_MAX_SESSION=3
+version: "3.9"
 
-			
-	firefox:
-		image: selenium/node-firefox:4.38.0
-		shm_size: 2gb
-		deploy:
-			replicas: 1
-		depends_on:
-			- selenium-hub
-		extra_hosts:
-			- "localhost:host-gateway"
-		environment:
-			- SE_EVENT_BUS_HOST=selenium-hub
-			- SE_EVENT_BUS_PUBLISH_PORT=4442
-		    - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-			- SE_NODE_MAX_SESSION=3
-			
-	firefox:
-		image: selenium/node-edge:4.38.0
-		shm_size: 2gb
-		deploy:
-			replicas: 1
-		depends_on:
-			- selenium-hub
-		extra_hosts:
-			- "localhost:host-gateway"
-		environment:
-			- SE_EVENT_BUS_HOST=selenium-hub
-			- SE_EVENT_BUS_PUBLISH_PORT=4442
-		    - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-			- SE_NODE_MAX_SESSION=3
-			
-	selenium-hub:
-		image: selenium/hub:4.38.0
-		container_name: selenium-hub
-		ports:
-			- "4442:4442"
-			- "4443:4443"
-			- "4444:4444"
+services:
+  chrome:
+    image: selenium/node-chrome:4.38.0
+    shm_size: 2g
+    deploy:
+      replicas: 1
+    depends_on:
+      - selenium-hub
+    extra_hosts:
+      - "localhost:host-gateway"
+    environment:
+      - SE_EVENT_BUS_HOST=selenium-hub
+      - SE_EVENT_BUS_PUBLISH_PORT=4442
+      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+      - SE_NODE_MAX_SESSION=3
+
+  firefox:
+    image: selenium/node-firefox:4.38.0
+    shm_size: 2g
+    deploy:
+      replicas: 1
+    depends_on:
+      - selenium-hub
+    extra_hosts:
+      - "localhost:host-gateway"
+    environment:
+      - SE_EVENT_BUS_HOST=selenium-hub
+      - SE_EVENT_BUS_PUBLISH_PORT=4442
+      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+      - SE_NODE_MAX_SESSION=3
+
+  edge:
+    image: selenium/node-edge:4.38.0
+    shm_size: 2g
+    deploy:
+      replicas: 1
+    depends_on:
+      - selenium-hub
+    extra_hosts:
+      - "localhost:host-gateway"
+    environment:
+      - SE_EVENT_BUS_HOST=selenium-hub
+      - SE_EVENT_BUS_PUBLISH_PORT=4442
+      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+      - SE_NODE_MAX_SESSION=3
+
+  selenium-hub:
+    image: selenium/hub:4.38.0
+    container_name: selenium-hub
+    ports:
+      - "4442:4442"
+      - "4443:4443"
+      - "4444:4444"
